@@ -1,9 +1,9 @@
 Algorithm::Voting
 
 This module contains pure-Perl implementations of various voting algorithms.
-Care has been taken to thoroughly test these implementations.  Nonetheless,
-this code is for educational and entertainment purposes only.  Use at your own
-risk.
+Care has been taken to thoroughly document and test these implementations.
+Nonetheless, this code is for educational and entertainment purposes only.  Use
+at your own risk.
 
 INSTALLATION
 
