@@ -4,16 +4,18 @@ use File::Spec;
 use Test::More;
 use English qw(-no_match_vars);
 
-if ( not $ENV{TEST_AUTHOR} ) {
-my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
-plan( skip_all => $msg );
+unless ($ENV{TEST_AUTHOR}) {
+    my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
+    plan(skip_all => $msg);
 }
 
-eval { require Test::Perl::Critic; };
+eval {
+    require Test::Perl::Critic;
+};
 
-if ( $EVAL_ERROR ) {
-my $msg = 'Test::Perl::Critic required to criticise code';
-plan( skip_all => $msg );
+if ($EVAL_ERROR) {
+    my $msg = 'Test::Perl::Critic required to criticise code';
+    plan( skip_all => $msg );
 }
 
 my $rcfile = File::Spec->catfile( 't', 'perlcriticrc' );
