@@ -4,6 +4,12 @@ use strict;
 use warnings;
 use Test::More;
 
+unless ($ENV{TEST_AUTHOR}) {
+    my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
+    plan(skip_all => $msg);
+}
+
+
 # Ensure a recent version of Test::Pod
 my $min_tp = 1.22;
 eval "use Test::Pod $min_tp";
